# Indices_precio_globales

./: .gitignore  README.md  Requirements.txt  __init__.py  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
notebook/: 01_exploracion.ipynb  02_limpieza.ipynb  03_transformacion.ipynb  04_analisis_final.ipynb
src/: __init__.py  clean_data.py  load_data.py  logger.py  transform.py
tests/: conftest.py  test_clean_data.py  test_transform.py
